--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,16 +11,20 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+
   flutter_localizations:
     sdk: flutter
   intl: ^0.18.1
 
 dev_dependencies:
   bloc_test: ^9.1.4
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.2
   flutter_test:
     sdk: flutter
   mocktail: ^1.0.0
   very_good_analysis: ^5.1.0
+
 
 flutter:
   uses-material-design: true
