feat: OpenSea collection view
Adds a view for displaying OpenSea collections

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,6 +60,7 @@ jobs:
         with:
           path: ./coverage/lcov.info
           min_coverage: 100
+          exclude: '**/*.g.dart **/freezed.dart'
 
       - name: ⬆️ Upload to Codecov
         uses: codecov/codecov-action@v3
