--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,21 +8,39 @@ environment:
 
 dependencies:
   bloc: ^8.1.2
+  cached_network_image: ^3.3.0
+  dartz: ^0.10.1
+  dio: ^5.3.3
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-
+  flutter_cache_manager: ^3.3.1
   flutter_localizations:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.7.0
+  freezed_annotation: ^2.4.1
+  get_it: ^7.6.4
+  injectable: ^2.3.2
   intl: ^0.18.1
+  json_annotation: ^4.8.1
+  liquid_pull_to_refresh: ^3.0.1
+  logger: ^2.0.2+1
+  mocktail_image_network: ^1.0.0
+  octo_image: ^2.0.0
+  retrofit: ^4.0.2
 
 dev_dependencies:
   bloc_test: ^9.1.4
+  build_runner: ^2.4.6
   flutter_launcher_icons: ^0.13.1
   flutter_native_splash: ^2.3.3
   flutter_test:
     sdk: flutter
+  freezed: ^2.4.5
+  injectable_generator: ^2.4.1
+  json_serializable: ^6.7.1
   mocktail: ^1.0.1
+  retrofit_generator: ^8.0.0
   very_good_analysis: ^5.1.0
 
 
