feat: Collection details
Adds the option to look into OpenSea collections and display all NFTs of a collection

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -60,7 +60,7 @@ jobs:
         with:
           path: ./coverage/lcov.info
           min_coverage: 100
-          exclude: '**/*.g.dart **/freezed.dart'
+          exclude: '**/*.g.dart **/freezed.dart **/*.injection_container.dart **/*.l10n.dart **/*routes.dart'
 
       - name: ⬆️ Upload to Codecov
         uses: codecov/codecov-action@v3
