--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -55,12 +55,17 @@ jobs:
       - name: 🧪 Run Tests
         run: very_good test -j 4 --optimization --coverage --test-randomize-ordering-seed random
 
+      - name: 🧽 Remove generated files from coverage
+        run: |
+          dart pub global activate remove_from_coverage
+          remove_from_coverage -f coverage/lcov.info -r '\.g\.dart$'
+
       - name: 📊 Check Code Coverage
         uses: VeryGoodOpenSource/very_good_coverage@v2
         with:
           path: ./coverage/lcov.info
           min_coverage: 100
-          exclude: '**/*.g.dart **/freezed.dart **/*.injection_container.dart **/*.l10n.dart **/*routes.dart'
+          exclude: '**/*.g.dart **/.freezed.dart'
 
       - name: ⬆️ Upload to Codecov
         uses: codecov/codecov-action@v3
